testing/Travis/testcases/prototype/shouldFail/try17.adl
CONTEXT Test IN ENGLISH

PATTERN Test17
RELATION r[X*Y]
RELATION s[X*A]
RELATION t[B*Y]
RULE r = s;t
RULE I[D] = I[A]\/I[B]
ENDPATTERN

ENDCONTEXT

{-
   Purpose: This script shows that a type conflict (between A and B) can be resolved
            by defining a union type D.
   Result: FAIL
   Reason:  This requires an intersection type between A and B, which is not there.
   Adding RULE I[E] = I[A]/\I[B] helps, because this yields concept E to be the type between s and t.
-}